# kinward

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  ai.yaml  compose.honcho.yaml  compose.llmwiki.yaml  compose.yaml  idea.md  mise.toml  opencode.json  package.json  pnpm-lock.yaml
.ai/: README.md
custom_components/kinward/: README.md  __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  conversation.py  coordinator.py  diagnostics.py  entity.py  kinward-dashboard.yaml  kinward-helpers.yaml  manifest.json  pyproject.toml  sensor.py  services.yaml  strings.json
custom_components/kinward/tests/: conftest.py  test_api_classification.py
custom_components/kinward/translations/: en.json
custom_components/kinward/www/: kinward-assistant-card.js
services/kinward/: Dockerfile  alembic.ini  pyproject.toml
services/kinward/migrations/: env.py
services/kinward/migrations/versions/: 001_initial_single_household.py  002_integration_tokens.py  003_ha_user_mappings.py  004_conversation_topics.py  005_topic_titles.py  006_ha_person_sync.py  007_provider_settings.py  008_multiple_assistants_per_person.py  009_assistant_access_modes.py  010_knowledge_facts.py  010_meaningful_action_approvals.py  011_knowledge_facts.py  (+4 more)
services/kinward/tests/: test_accounts.py  test_accounts_setup_api.py  test_activity.py  test_admin_invariant.py  test_assistant_access.py  test_assistant_ownership.py  test_assistants.py  test_attention_item.py  test_briefing.py  test_calendar.py  test_calendar_change_detection.py  test_calendar_observation.py  test_config.py  test_conversation.py  test_crypto.py  test_ha_observation.py  test_ha_user_mappings.py  test_health.py  test_household_resource_labels.py  test_integration_api.py  test_integration_tokens.py  test_integrations.py  test_interview.py  test_knowledge.py  test_layout_lifecycle.py  test_layouts_api.py  test_lifecycle.py  test_llm_providers.py  test_memory_providers.py  test_migrations.py  test_operational_context.py  test_pending_action.py  test_pending_actions.py  test_people_admin.py  test_people_sync.py  test_permissions.py  test_persistence.py  test_person_deletion.py  test_persona_import.py  test_pets.py  (+6 more)
(+203 files in other folders)
