[project]
name = "kinward-ha-integration-devtools"
version = "0.1.0"
description = "Dev/test tooling for the custom_components/kinward Home Assistant integration"
requires-python = ">=3.14,<3.15"
dependencies = []

[dependency-groups]
dev = [
  "aiohttp>=3,<4",
  "pytest>=9,<10",
  "pytest-asyncio>=1,<2",
  "ruff>=0.15,<0.16",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
exclude = [".venv"]
