[project]
name = "kinward"
version = "0.1.0"
description = "Single-household AI assistant runtime"
requires-python = ">=3.14,<3.15"
dependencies = [
  "alembic>=1,<2",
  "aiosqlite>=0.22,<1",
  "asyncpg>=0.31,<1",
  "argon2-cffi>=25,<26",
  "email-validator>=2.3,<3",
  "fastapi>=0.139,<0.140",
  "httpx>=0.28,<1",
  "pydantic-settings>=2,<3",
  "python-dotenv>=1,<2",
  "sqlalchemy[asyncio]>=2,<3",
  "uvicorn[standard]>=0.41,<1",
]

[dependency-groups]
dev = [
  "mypy>=2,<3",
  "pytest>=9,<10",
  "pytest-asyncio>=1,<2",
  "ruff>=0.15,<0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kinward"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.14"
strict = true
